# VideoRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docker/: Dockerfile
scripts/: build_index.py  download_demo_data.py  process_videos.py
src/videorag/asr/: whisper_transcriber.py
src/videorag/config/: settings.py
src/videorag/eval/: metrics.py
src/videorag/index/: milvus_client.py  schema.py
src/videorag/io/: chunking.py  video.py
src/videorag/rag/: generator.py  pipeline.py
src/videorag/text/: embedder.py
src/videorag/ui/: app.py
src/videorag/utils/: logging.py  paths.py
src/videorag/vision/: clip_embedder.py  keyframes.py
tests/: __init__.py  test_chunking.py  test_metrics.py
