[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videorag"
version = "0.1.0"
description = "Multimodal Retrieval-Augmented Generation over Video Corpora"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ayham Jo", email = "ayham@example.com"}
]
keywords = ["video", "rag", "retrieval", "multimodal", "clip", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "openai-whisper>=20231117",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "opencv-python>=4.8.0",
    "pillow>=10.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pymilvus>=2.3.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/AyhamJo7/VideoRAG"
Repository = "https://github.com/AyhamJo7/VideoRAG"
Issues = "https://github.com/AyhamJo7/VideoRAG/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/videorag --cov-report=html --cov-report=term"
